# pleepbot-py

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  compose.yaml  pyproject.toml
Discord/: Dockerfile  discordbot.py
Discord/cogs/: admin.py  basic.py  emotes.py
Twitch/: Dockerfile  __init__.py  exceptions.py  logger.py  twitchbot.py
Twitch/cogs/: admin.py  ai.py  basic.py  emote.py  fish.py  join.py  location.py  message.py  moderator.py  remind.py  seventv.py  seventv_editor.py  translate.py  twitch_notification.py  user_info.py  util.py  youtube.py
Twitch/handlers/: custom_command.py  emote_streak.py  eventsub.py  message_queue.py
db/: schema.sql
db/migrations/: 20240717224825_initial.sql  20240811154021_move_enum_types_to_schema_twitch.sql  20240831210348_add_id_columns_to_tables.sql  20240831210655_remove_unnecessary_columns.sql  20240923122022_add_online_column_to_message.sql  20240926234316_create_location_table.sql  20241112072924_fix_cancel_reminders_trigger.sql
nginx/: nginx.conf.example
scripts/twitch/: emote_usage.py  iq_limits.py  output_folder.py  set_location.py
shared/apis/: cache.py  exceptions.py
shared/apis/bttv/: REST.py
shared/apis/dadjokes/: REST.py  __init__.py  models.py
shared/apis/ffz/: REST.py
shared/apis/google/: REST.py  models.py
shared/apis/mathjs/: REST.py
shared/apis/openweather/: REST.py  models.py
shared/apis/seventv/: GQL.py  REST.py  __init__.py  models.py
shared/apis/themealdb/: REST.py  models.py
shared/database/: __init__.py  exceptions.py
shared/util/: formatting.py
(+23 files in other folders)
